--- a/Audrey_24_Lab_3.ipynb
+++ b/Audrey_24_Lab_3.ipynb
@@ -3,8 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -16,18 +15,8 @@
   },
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/enamouring/Stats-Eng/blob/main/Audrey_24_Lab_3.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "mBTZa3LbmlCv"
       },
@@ -54,7 +43,7 @@
       "source": [
         "#CDF-cumulative distribution function PDF-probability density function, add up the area"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -72,7 +61,7 @@
         "id": "oCyzB_zEqcSE",
         "outputId": "e68c37a0-1a37-4bff-d5da-f7586eeb3b21"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -124,7 +113,7 @@
         "\n",
         "  return (1/(np.sqrt(2*np.pi*sigma**2)))*np.exp((-(x-mu)**2)/(2*sigma**2)) #shift and scale (changing shape of the curve)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -135,7 +124,7 @@
       "source": [
         "x = np.linspace(-6,6,1000) #plugging in 1000 points from -6 to 6"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -146,7 +135,7 @@
       "source": [
         "mu = 0"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -157,7 +146,7 @@
       "source": [
         "sigma = 1"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -168,7 +157,7 @@
       "source": [
         "pdf = normal_pdf(x,mu,sigma)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -185,7 +174,7 @@
         "plt.plot(x,pdf,'.') #scale so area under the curve is always approximately 1\n",
         "# plt.plot(x,y,'g.')"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -223,7 +212,7 @@
         "id": "x0Fhchx5nY49",
         "outputId": "dbf39f2f-c4cb-42a1-9ce8-0f67ad97fe11"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -249,7 +238,7 @@
         "id": "-FCfM6qZoCYx",
         "outputId": "ae834cc1-3283-4dad-c61d-1b07a723594f"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -269,7 +258,7 @@
       "metadata": {
         "id": "q0ucJFgjoL1W"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -290,7 +279,7 @@
         "\n",
         "  return y"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -301,7 +290,7 @@
       "source": [
         "cdf = cumulative_sum(pdf)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -316,7 +305,7 @@
         "id": "pKvqnqvVoOrG",
         "outputId": "0b7cab42-95ac-4ac8-a801-726f438b22d5"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -343,7 +332,7 @@
       "source": [
         "plt.plot(x,cdf,'.'); #goes up to 1 and peaks there; running cumulative sum (one side to the other)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -366,7 +355,7 @@
         "# d_cdf = cdf[1:] - cdf[0:-1] #Demo to show that the derivative of the cdf gives you back the pdf\n",
         "# plt.plot(x[1:],d_cdf,'.');  #Not required for sampling"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -382,7 +371,7 @@
       "source": [
         "plt.plot(cdf,x,'.'); #flip the previous graph (x,y)->(y,x), shows the likeliness of getting a non-outlier"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -408,7 +397,7 @@
         "\n",
         "  return idx"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -423,7 +412,7 @@
         "id": "qtYgFOIdpqL6",
         "outputId": "d50d884d-5043-46c8-8f29-509fbe58bde7"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -442,7 +431,7 @@
       "metadata": {
         "id": "aEAKkw4xp8d1"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -457,7 +446,7 @@
         "id": "jPCgt5gCpwid",
         "outputId": "df1ddb24-2df8-4d03-b652-cff911590cb9"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -483,7 +472,7 @@
         "id": "Mhf8ywvfqQSI",
         "outputId": "472a0e63-e81b-475e-b25c-c4776d0a3412"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -509,7 +498,7 @@
       "source": [
         "find_nearest(cdf, 0.1)"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -535,7 +524,7 @@
       "source": [
         "x[393]"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -557,7 +546,7 @@
       "source": [
         "xr = np.random.random((10000,))"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -572,7 +561,7 @@
         "id": "0dlKIORtqxBl",
         "outputId": "6beeb5ed-eb3a-4453-a1c8-d548ee8ded9a"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -598,7 +587,7 @@
         "id": "GC-ehMrgq_Gx",
         "outputId": "62f9ebcf-ba11-49e7-cd68-4f6b0a7e00d1"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -624,7 +613,7 @@
         "\n",
         "  w[i] = x[find_nearest(cdf, xr[i])]"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -639,7 +628,7 @@
       "source": [
         "w.shape"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -666,7 +655,7 @@
       "source": [
         "plt.hist(w,50);"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -696,7 +685,7 @@
         },
         "outputId": "d8a61948-6628-4d34-84e1-d35b11a59551"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -726,7 +715,7 @@
       "metadata": {
         "id": "TvG2_-k-8U1M"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -735,7 +724,7 @@
       "metadata": {
         "id": "gT-OjSFcm4Uc"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -790,7 +779,7 @@
         "id": "uHDNfJ27fTLr",
         "outputId": "85cadcf8-abdf-4f3d-a91a-467aea815b40"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -812,7 +801,7 @@
       "metadata": {
         "id": "jJowCSRsnroR"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -872,7 +861,7 @@
         "id": "UagigVXQnrwI",
         "outputId": "732a4421-df31-4899-a464-f7f0668661fa"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -894,7 +883,7 @@
       "metadata": {
         "id": "S_zodvhJpkkH"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -952,7 +941,7 @@
         "id": "Uez6Ycj5qxmO",
         "outputId": "95cae9e4-44e2-43ca-fbe0-85132176a380"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -974,7 +963,7 @@
       "metadata": {
         "id": "t_78DbpXePzR"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1022,7 +1011,7 @@
         },
         "outputId": "62300f8c-00f3-4fd9-8176-5b5aa6d6b60a"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
